update the ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,27 @@
-.settings/org.codehaus.groovy.eclipse.preferences.prefs
+*.iws
+*.iml
+*.ipr
+.idea/
+.settings
 devDB.log
 devDB.properties
 devDB.script
+*Db.properties
+*Db.script
+eclipse
 lib/postgresql-8.3-604.jdbc3.jar
-src/templates/artifacts/Controller.groovy
-src/templates/artifacts/DomainClass.groovy
-src/templates/artifacts/Filters.groovy
-src/templates/artifacts/Script.groovy
-src/templates/artifacts/Service.groovy
-src/templates/artifacts/TagLib.groovy
-src/templates/artifacts/Tests.groovy
-src/templates/artifacts/WebTest.groovy
-src/templates/scaffolding/Controller.groovy
-src/templates/scaffolding/create.gsp
-src/templates/scaffolding/edit.gsp
-src/templates/scaffolding/list.gsp
-src/templates/scaffolding/renderEditor.template
-src/templates/scaffolding/show.gsp
-src/templates/war/web.xml
 stacktrace.log
-test/reports/TEST-CarControllerTests.xml
-test/reports/TEST-CarTests.xml
-test/reports/TESTS-TestSuites.xml
-test/reports/html/0_CarControllerTests-err.txt
-test/reports/html/0_CarControllerTests-out.txt
-test/reports/html/0_CarControllerTests.html
-test/reports/html/1_CarTests-err.txt
-test/reports/html/1_CarTests-fails.html
-test/reports/html/1_CarTests-out.txt
-test/reports/html/1_CarTests.html
-test/reports/html/all-tests.html
-test/reports/html/allclasses-frame.html
-test/reports/html/alltests-errors.html
-test/reports/html/alltests-fails.html
-test/reports/html/index.html
-test/reports/html/overview-frame.html
-test/reports/html/overview-summary.html
-test/reports/html/package-frame.html
-test/reports/html/package-summary.html
-test/reports/html/stylesheet.css
-test/reports/plain/TEST-CarControllerTests-err.txt
-test/reports/plain/TEST-CarControllerTests-out.txt
-test/reports/plain/TEST-CarControllerTests.txt
-test/reports/plain/TEST-CarTests-err.txt
-test/reports/plain/TEST-CarTests-out.txt
-test/reports/plain/TEST-CarTests.txt
+/plugins
+/web-app/plugins
+/web-app/WEB-INF/classes
+
+# Mac OSX ignores
+.DS_Store
+Icon?
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
